Added algoprog links

--- a/_posts/2017-12-08-belong-in.md
+++ b/_posts/2017-12-08-belong-in.md
@@ -54,3 +54,7 @@ title: Code that belongs in a problem
 
 Так же и код. Есть код, который belong in решение задачи, а есть код, который does not belong in. И если вы пишете в задаче код,
 который не belong in, то неудивительно, что ваше решение не работает, и сколько if'ов не добавляйте, ваше решение не заработает.
+
+----
+
+*Мой курс по алгоритмическому программированию (и подготовке к олимпиадам) для школьников, студентов и всех желающих — [algoprog.ru](http://algoprog.ru)*
