--- a/_posts/2018-10-26-ub.md
+++ b/_posts/2018-10-26-ub.md
@@ -7,3 +7,7 @@ title: "Undefined behavior: как прострелить себе ногу в C
 Сейчас огранизаторы мероприятия смонтировали видео и
 [выложили на youtube](https://www.youtube.com/watch?v=P3Ip3WNxPVg). 
 Настоятельно рекомендую посмотреть всем, кто более-менее неплохо знает C++.
+
+----
+
+*Мой курс по алгоритмическому программированию (и подготовке к олимпиадам) для школьников, студентов и всех желающих — [algoprog.ru](http://algoprog.ru)*
