--- a/_posts/2019-03-17-heroes.md
+++ b/_posts/2019-03-17-heroes.md
@@ -27,6 +27,7 @@ title: Русификация «Героев-2», или Плацинг цаст
 Основная же проблема, которая у нас была — это было то, что *редактор карт* не был русифицирован. Точнее, он был русифицирован,
 но как-то глючно. Все надписи были русскими буквами, но какой-то абракадаброй. Например, на панели выбора типа рельефа
 (там, где вода, земля, песок, снег и т.д.), кнопка с изображением воды была подписана «Щсуфт».
+(Я точно уже не помню слов, просто восстанавливаю наиболее правдоподобную версию.)
 
 (Особые маньяки могут сейчас остановиться, не читать дальше, и попробовать догадаться, в чем было дело. 
 Сейчас-то это, наверное, даже весьма просто.)
@@ -36,6 +37,9 @@ title: Русификация «Героев-2», или Плацинг цаст
 наверняка был прекрасно знаком.) Соответственно, я стал пытаться расшифровать этот шифр, благо
 «Пляшущих человечков» я к тому времени уже давно читал. Довольно быстро я решил, что стоит опираться
 именно на ту панельку с типами рельефа — как минимум, там довольно понятно, что должно быть написано.
+
+[![Посетители](/images/2019-03-17-heroes/editor.JPG){:height="400px"}](/images/2019-03-17-heroes/editor.JPG)
+*Видимо, тот самый редактор карт, но в английском варианте*
 
 ...Не помню, как я догадался до того, что оригинальный текст был английский. Может быть, я сначала
 долго тщетно пытался расшифровать в русский текст, а может быть я довольно быстро заметил,
