--- a/_posts/2019-03-17-heroes.md
+++ b/_posts/2019-03-17-heroes.md
@@ -38,7 +38,7 @@ title: Русификация «Героев-2», или Плацинг цаст
 «Пляшущих человечков» я к тому времени уже давно читал. Довольно быстро я решил, что стоит опираться
 именно на ту панельку с типами рельефа — как минимум, там довольно понятно, что должно быть написано.
 
-[!(/images/2019-03-17-heroes/editor.jpg){:height="400px"}](/images/2019-03-17-heroes/editor.jpg)
+[![Картинка](/images/2019-03-17-heroes/editor.jpg){:height="400px"}](/images/2019-03-17-heroes/editor.jpg)
 
 *Видимо, тот самый редактор карт, но в английском варианте*
 
