--- a/_posts/2019-03-17-heroes.md
+++ b/_posts/2019-03-17-heroes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Русификация «Героев-2», или Плацинг цастлес
+title: Как я «Героев-2» русифицировал (не совсем)
 ---
 
 ...Тут, говорят, исполнилось 20 лет третьим «Героям», на «Медузе» прекрасный текст с воспоминаниями про них,
