Fix typos in nou

--- a/_posts/2019-12-01-nou.md
+++ b/_posts/2019-12-01-nou.md
@@ -5,7 +5,7 @@ title: Про научные общества учащихся, школьные
 
 Помимо олимпиад, есть еще один довольно широко распространенный вид «наукообразной» деятельности для школьников — 
 это всевозможные «научные общества учащихся», «конференции», на которых школьники представляют свои «проекты». 
-У меня такое очень двоякое отношение к таким мероприятиям; очень вкратце — проекты делтать имеет смысл,
+У меня такое очень двоякое отношение к таким мероприятиям; очень вкратце — проекты делать имеет смысл,
 участвовать в конференциях — в большинстве случаев вряд ли.
 
 (Disclaimer: я не имею очень большого опыта подготовки школьников к участию в разных конференциях, 
@@ -37,18 +37,18 @@ title: Про научные общества учащихся, школьные
 Во-вторых, в НОУ отсутствует какая-либо система выше примерно городского уровня. Нет какого-нибудь единого областного НОУ 
 (ну или не в каждой области он есть), нет централизованного всероссийского и тем более международного НОУ.
 Есть много разных конференций, добавляющих в свое название слова «всероссийская» или даже «международная», 
-но эти слова мало что значат: можно опублковать на сайте, что приглашаются участники со всей России — 
+но эти слова мало что значат: можно опубликовать на сайте, что приглашаются участники со всей России — 
 и вот конференция «всероссийская», и не важно, что реально народ приезжает 
 из всего нескольких регионов.
 Или собрать конференцию из пары областей и, допустим, Беларуси, и вот вам она уже международная.
 
 В олимпиадах же все намного четче: есть система Всероссийской олимпиады школьников, есть система поступательных (перечневых) олимпиад,
 и тут всё понятно. Конечно, и в олимпиадах есть [неадекватные олимпиады](http://blog.algoprog.ru/infoznayka), 
-и их много, но наличие единой системы и тем же уровней перечневых олимпиад позволяет намного лучше понимать кто есть кто.
+и их много, но наличие единой системы и тех же уровней перечневых олимпиад позволяет намного лучше понимать, кто есть кто.
 
 (Аналогичная проблема непонятных уровней есть и у музыкантов-танцоров-актеров. Когда про музыканта пишут «лауреат международного конкурса»,
 я понимаю, что это не значит ничего. И, кстати, аналогичная проблема у студенческих олимпиад (не считая ACM), но там еще проблема и в том,
-что система олимпиад в принципе не развита.)
+что система студенческих олимпиад в принципе не развита.)
 
 В-третьих, оценка работ на конференциях крайне субъективна. На олимпиадах всё четко: кто больше решил, тот и победил.
 На конференциях жюри вынуждено сравнивать очень разные работы, нет никаких единых критериев (или они карго-культовые, см. ниже),
@@ -58,7 +58,7 @@ title: Про научные общества учащихся, школьные
 жюри намного более вольно в применении таких политических соображений.)
 
 Не говоря уж о том, что на конференции невозможно оценить весь проект в деталях. Вы сделали полезное мобильное приложение 
-для чего-то там, допустим? Конечно, вы покажете презентацию, может быть даже дадите жюри телефон с приложением потыкать
+для чего-то там, допустим? Конечно, вы покажете презентацию со скриншотами, может быть даже дадите жюри телефон с приложением потыкать
 (но это, полагаю, уже далеко не на каждой конференции), но может быть оно у вас через раз падает и пользоваться им невозможно?
 Или может быть оно выглядит красиво «на потыкать», но на практике конкретно для той цели, которую вы заявляли,
 окажется очень неудобным? И т.д. На олимпиадах, опять же, тут все четко: вот есть постановка задачи,
@@ -78,21 +78,22 @@ title: Про научные общества учащихся, школьные
 
 Наконец, есть еще одна, очень неприятная причина — это излишняя забюрократизированность и карго-культовость конференций.
 Если вы едете на конференцию, вы скорее всего должны написать какой-нибудь текст по вашему докладу — тезисы, а то и полноценную статью.
-Школьники, конечно, не очень понимаю, как пишутся настоящие научные статьи. Но проблема в том, что и руководители, и тем более организаторы конференций
+Школьники, конечно, не очень понимают, как пишутся настоящие научные статьи. Но проблема в том, что и руководители, и тем более организаторы конференций
 зачастую как будто тоже не понимают, как настоящие статьи пишутся. Но их кто-то (какие-нибудь философы-методисты) научили, допустим,
 что у каждого исследования, каждого *проекта* должны быть *цели* и *задачи*. Должны быть *выводы*. Должно быть *введение*, в идеале
 с обзором литературы. И вот эти организаторы, а хуже того и руководители начинают от школьников требовать, чтобы в их статье 
 был отдельный раздел «цели и задачи», и там эти цели и задачи были бы сформулированы, и не дай бог школьник перепутает цель и задачу. 
 И обязательно должны быть выводы, пусть даже речь идет о создании, условно говоря, приложения для распознавания рукописных букв на телефоне.
 Ну какие выводы тут могут быть? (При том, что такой проект может быть вполне достойным, как минимум для начальных уровней НОУ.)
-Еще небось и потребуют написать о возможных направлениях развития проекта или там о применимости проекта в сельском хозяйстве.
+Еще небось и потребуют написать о возможных направлениях дальнейшего развития проекта или там о применимости проекта в сельском хозяйстве.
 
 И это не только в тексте статьи, это могут ожидать и в презентации. И в самых запущенных случаях еще и могут оценивать
 доклад школьников по этим пунктам — не по реальному содержанию работы, а по тому, был ли слайд «выводы».
 
 Я, конечно, понимаю, что на конференции по идее должен оцениваться не только сам проект, но и его подача.
-Но все это не имеет никакого отношения но к реальной науке (а тем более не имеет отношения к программированию, которое все-таки не совсем наука),
-и не имеет отношения и к хорошему представлению проекта. Просто организаторы конференций и эти философы-методисты видели,
+Но все эти «цели и задачи» не имеют никакого отношения ни к реальной науке 
+(а тем более не имеют отношения к программированию, которое все-таки не совсем наука),
+ни к хорошему представлению проекта. Просто организаторы конференций и эти философы-методисты видели,
 что подобные разделы бывают в настоящих научных статьях (в явном или неявном виде), препарировали эти статьи и говорят:
 вот настоящие ученые пишут выводы. Вот и вы пишите. 
 
@@ -103,7 +104,7 @@ title: Про научные общества учащихся, школьные
 это вообще выдумки философов и методистов, которые настоящих исследований в своей жизни никогда не делали.
 
 Требования обязательного наличия таких разделов — это, конечно, классический 
-[карго-культ](http://ru.wikipedia.org/wiki/Карго-культ) — копирование практик успешных людей без малейшего их понимания.
+[карго-культ](http://ru.wikipedia.org/wiki/Карго-культ) (см. еще [тут](https://ru.wikipedia.org/wiki/Наука_самолётопоклонников)) — копирование практик успешных людей без малейшего их понимания.
 И это на самом деле очень большое зло, это то, что имхо очень убивает весь оставшийся интерес — потому что никакой разумный школьник,
 никакой школьник, умеющий думать головой, никогда не будет делать то, что не имеет никакого практического смысла, а карго-культ именно никакого смысла
 в себе и не несет.
@@ -112,15 +113,16 @@ title: Про научные общества учащихся, школьные
 Но проблема в том, что очень существенная часть науки, особенно российской — это такой же карго-культ.)
 
 Более того, вот я везде по тексту тут упоминаю слово «проект», хотя оно мне самому очень сильно не нравится. Не нравится тем,
-что это слово последние годы стало очень заезженным в образовательной среде, когда стало модно обучение через проектную деятельность
+что это слово последние годы стало очень заезженным в образовательной среде, когда стало модно «обучение через проектную деятельность»
 и, конечно, очень быстро это стало вырождаться в тот же карго-культ, когда учителя начинают писать бесконечные статьи и презентации
 про то, как сделать правильный проект, и вся суть «проекта» подменяется тем же карго-культом что в первую очередь нужно определить
-цели и т.д. Но это уже другая тема.
+цели проекта и т.д. Но это уже другая тема.
 
 И последнее — на конференциях, в отличие от олимпиад, надо еще и выступать, и потому часто говорят, что конференции учат публичным выступлениям.
 Это, с одной стороны, конечно, правда. Но с другой стороны, у меня постоянно есть ощущение, что когда руководители пытаются собственно
-научить школьников выступать, это получается очень плохо. Зачастую руководители напишут школьнику прямо текст выступления (да нередко еще и по ролям),
-заставят его выучить наизусть — ну и получится конечно очень жалкое зрелище. Школьник, конечно, все скажет, и если школльник хороший,
+научить школьников выступать, это получается очень плохо. Зачастую руководители напишут школьнику прямо текст выступления 
+(да нередко еще и по ролям для всех школьников, участвовавших в проекте),
+заставят его выучить наизусть — ну и получится конечно очень жалкое зрелище. Школьник, конечно, все скажет, и если школьник хороший,
 то он даже не просто оттараторит выученную речь, а расскажет ее с минимальным выражением — но все равно сразу видно, что это очень неестественно.
 Получается опять тот же карго-культ, но на этот раз карго-культ хорошего выступления. А на самом деле хорошее выстуление, имхо,
 проистекает вовсе не от тщательно разученного доклада, а от глубокого понимания темы; хорошие выступления имхо почти 
